--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>サンプルページ</title>
-        <link rel="stylesheet" href="stylesheet.scss">
+        <link rel="stylesheet" type="text/css" href="test.scss">
     </head>
     <body>
         <div class="header">
