サンプルページの実装

--- a/index.html
+++ b/index.html
@@ -1,17 +1,115 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>サンプルページ</title>
-        <link rel="stylesheet" type="text/css" href="test.scss">
-    </head>
-    <body>
-        <div class="header">
-           <div class="header-left">DREAMSHARE</div>
-           <div class="header-right">
-             <div class="login">Login</div>
-             <div class="signup">Signup</div>
-           </div>
+  <head>
+    <meta charset="utf-8">
+    <title>サンプルページ</title>
+    <link rel="stylesheet" type="text/css" href="./stylesheets/test.css">
+  </head>
+  <body>
+    <header>
+        <div class="header-left">
+            <a href="#">DREAMSHARE</a>
         </div>
-    </body>
+        <div class="header-right">
+            <a class="login" href="#">Login</a>
+            <a class="signup" href="#">Sign up</a>
+        </div>
+    </header>
+    <div class="top-wrapper">
+      <div class="container">
+            <h1>SHARE YOUR</h1>
+            <h1>HOLIDAY DREME</h1>
+            <p>And find the perfect partner to fullfill it</p>
+        <div class="btn-wrapper">
+            <a href="#" class="btn">Find your holiday partner</a>
+        </div>
+      </div>
+    </div>
+    <div class="work-wrapper">
+      <div class="container">      
+         <div class="heading">
+            <h2>How Dreamshare works?</h2>
+         </div>
+         <div class="works">
+            <div class="work">
+                <div class="work-icon">
+                  <img src="./images/Step-1.png">
+                    <div class="work-text">
+                        <p class="top-txt">Step 1</p>
+                        <p class="title-txt">Sed leo enim,<br>condimentum</p>
+                        <p class="txt-contents">Quisque libero libero, dictum<br>non turpis in, luctus semper<br>lorem. Donec rhoncus a leo sit<br> amet facilisis.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="work">
+                <div class="work-icon">
+                  <img src="./images/Step-2.png">
+                    <div class="work-text">
+                        <p class="top-txt">Step 2</p>
+                        <p class="title-txt">Morbi velit risus</p>
+                        <p class="txt-contents">Nulla venenatis tempor dui in<br>molestie. Nulla quis dictum<br> lorem. Donec rhoncus a leo sit<br>purus, sit amet porttitor est.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="work">
+                <div class="work-icon">
+                  <img src="./images/Step-3.png">
+                    <div class="work-text">
+                        <div class="top-txt-wrapper">
+                            <p class="top-txt">Step 3</p>
+                        </div>
+                        <p class="title-txt">Sed leo enim,<br>condimentum</p>
+                        <p class="txt-contents">Quisque libero libero, dictum<br> non turpis in, luctus semper<br> lorem. Donec rhoncus a leo sit<br> amet facilisis.</p>
+                    </div>
+                </div>
+            </div>
+         </div>
+      </div>
+    </div>
+    <div class="partner-wrapper">
+      <div class="container">      
+         <div class="heading">
+            <h2>Meet a partner for your best holiday</h2>
+         </div>
+         <div class="partners">
+            <div class="partner">
+                <div class="partner-icon">
+                  <img src="./images/person-1.png" class="border_radius">
+                </div>
+                    <div class="partner-text">
+                        <h3>Bradley Hunter</h3>
+                        <p>Based in Chicago. I love<br>playing tennis and loud<br>music.</p>
+                    </div>
+            </div>
+            <div class="partner">
+                <div class="partner-icon">
+                  <img src="./images/person-2.png" class="border_radius">
+                </div>
+                    <div class="partner-text">
+                        <h3>Marie Bennett</h3>
+                        <p>Currently living in Colorado. <br>Lover of art, languages and<br>travelling.</p>
+                    </div>
+            </div>
+            <div class="partner">
+                <div class="partner-icon">
+                  <img src="./images/person-3.png" class="border_radius">
+                </div>
+                    <div class="partner-text">
+                        <h3>Diana Wells</h3>
+                        <p>Living in Athens, Greece. I<br>love black and white<br>classics, chillout music and<br>green tea.</p>
+                    </div>
+            </div>
+            <div class="partner">
+                <div class="partner-icon">
+                  <img src="./images/person-4.png" class="border_radius">
+                </div>
+                    <div class="partner-text">
+                        <h3>Christopher Pierce</h3>
+                        <p>Star Wars fanatic. I have a<br>persistent enthusiasm to<br>create new things.</p>
+                    </div>
+            </div>
+         </div>
+      </div>
+    </div>
+  </body>
 </html>
