musicアイコンの実装

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>サンプルページ</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/test.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -75,6 +76,7 @@
             <div class="partner">
                 <div class="partner-icon">
                   <img src="./images/person-1.png" class="border_radius">
+                  <i class="fas fa-music"></i>
                 </div>
                     <div class="partner-text">
                         <h3>Bradley Hunter</h3>
