レスポンシブデザインの実装

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>サンプルページ</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/test.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
     <header>
-        <div class="header-left">
-            <a href="#">DREAMSHARE</a>
-        </div>
         <div class="header-right">
             <a class="login" href="#">Login</a>
             <a class="signup" href="#">Sign up</a>
+        </div>
+        <div class="header-left">
+            <a href="#">DREAMSHARE</a>
         </div>
     </header>
     <div class="top-wrapper">
@@ -75,10 +77,10 @@
          <div class="partners">
             <div class="partner">
                 <div class="partner-icon">
-                  <img src="./images/person-1.png" class="border_radius">
-                  <i class="fas fa-music"></i>
+                  <img src="./images/person-1.png" class="border_radius">  
+                    <i class="fas fa-music"></i>
                 </div>
-                    <div class="partner-text">
+                    <div class="partner-txt">
                         <h3>Bradley Hunter</h3>
                         <p>Based in Chicago. I love<br>playing tennis and loud<br>music.</p>
                     </div>
@@ -86,8 +88,9 @@
             <div class="partner">
                 <div class="partner-icon">
                   <img src="./images/person-2.png" class="border_radius">
+                  <i class="fas fa-pencil-alt"></i>
                 </div>
-                    <div class="partner-text">
+                    <div class="partner-txt">
                         <h3>Marie Bennett</h3>
                         <p>Currently living in Colorado. <br>Lover of art, languages and<br>travelling.</p>
                     </div>
@@ -95,8 +98,9 @@
             <div class="partner">
                 <div class="partner-icon">
                   <img src="./images/person-3.png" class="border_radius">
+                  <i class="fas fa-camera"></i>
                 </div>
-                    <div class="partner-text">
+                    <div class="partner-txt">
                         <h3>Diana Wells</h3>
                         <p>Living in Athens, Greece. I<br>love black and white<br>classics, chillout music and<br>green tea.</p>
                     </div>
@@ -104,8 +108,9 @@
             <div class="partner">
                 <div class="partner-icon">
                   <img src="./images/person-4.png" class="border_radius">
+                  <i class="fas fa-plane"></i>
                 </div>
-                    <div class="partner-text">
+                    <div class="partner-txt">
                         <h3>Christopher Pierce</h3>
                         <p>Star Wars fanatic. I have a<br>persistent enthusiasm to<br>create new things.</p>
                     </div>
