サンプルページの実装

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>サンプルページ</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/test.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/responsive.css">
@@ -20,8 +20,7 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-            <h1>SHARE YOUR</h1>
-            <h1>HOLIDAY DREME</h1>
+            <h1>SHARE YOUR<br>HOLIDAY DREME</h1>
             <p>And find the perfect partner to fullfill it</p>
         <div class="btn-wrapper">
             <a href="#" class="btn">Find your holiday partner</a>
@@ -58,9 +57,7 @@
                 <div class="work-icon">
                   <img src="./images/Step-3.png">
                     <div class="work-text">
-                        <div class="top-txt-wrapper">
-                            <p class="top-txt">Step 3</p>
-                        </div>
+                        <p class="top-txt">Step 3</p>
                         <p class="title-txt">Sed leo enim,<br>condimentum</p>
                         <p class="txt-contents">Quisque libero libero, dictum<br> non turpis in, luctus semper<br> lorem. Donec rhoncus a leo sit<br> amet facilisis.</p>
                     </div>
@@ -116,7 +113,120 @@
                     </div>
             </div>
          </div>
+         <div class="other-partner">
+            <a href="#">See other partners</a>
+         </div>
       </div>
     </div>
+    <div class="activity-wrapper">
+        <div class="container">
+            <div class="heading">
+                <h2>Discover holiday activity ideas</h2>
+            </div>
+            <div class="activities">
+                <div class="activity1">
+                    <div class="activity-icon">
+                    <img src="./images/Sport.png">
+                        <div class="activity-text1">
+                            <p>Sports and Activis</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity2">
+                    <div class="activity-icon">
+                    <img src="./images/Healath.png">
+                        <div class="activity-text2">
+                            <p>Wellness and Health</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity3">
+                    <div class="activity-icon">
+                    <img src="./images/Extreme.png">
+                        <div class="activity-text3">
+                            <p>Extreme Sports and Expeditions</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity4">
+                    <div class="activity-icon">
+                    <img src="./images/Games.png">
+                        <div class="activity-text4">
+                            <p>Games</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity5">
+                    <div class="activity-icon">
+                    <img src="./images/Culture.png">
+                        <div class="activity-text5">
+                            <p>Culture and Education</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity6">
+                    <div class="activity-icon">
+                    <img src="./images/Culture Copy.png">
+                        <div class="activity-text6">
+                            <p>Enjomet and Relaxation</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity7">
+                    <div class="activity-icon">
+                    <img src="./images/Games Copy.png">
+                        <div class="activity-text7">
+                            <p>Trevelling</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-wrapper">
+        <div class="container">
+            <h1>Crate your holiday activity</h1>
+            <p>Hi! What are your holiday interests?</p>
+            <div class="forms">
+                    <input type="text" size="50" class="txt-form" placeholder="Enter your interests">
+                    <a href="#" class="search">Search Partners</a>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-wrapper">
+            <div class="container">
+                <div class="footers">
+                    <div class="footer-txt">
+                        <h1 class="dreamshare">DREAMESHARE</h1>
+                    </div>
+                    <div class="footer-txt">
+                        <div class="company">
+                            <h1 class="comp">Company</h1>
+                            <ul>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Press</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Terms and Privacy</a></li>
+                                <li><a href="#">Help</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-txt">
+                        <h1 class="part">Partners</h1>
+                    </div>
+                    <div class="footer-txt">
+                        <div class="design-txt">
+                            <h3 class="design">DESIGNED BY</h3>
+                            <div class="footer-icon">
+                                <img src="./images/Bitmap.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
