サンプルページの改善

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
   </head>
   <body>
     <header>
-        <div class="header-right">
-            <a class="login" href="#">Login</a>
-            <a class="signup" href="#">Sign up</a>
-        </div>
-        <div class="header-left">
-            <a href="#">DREAMSHARE</a>
+        <div class="top-wrapper">
+            <div class="container">
+                <div class="header-txt">
+                    <div class="header-right">
+                        <a class="login" href="#">Login</a>
+                        <a class="signup" href="#">Sign up</a>
+                    </div>
+                    <div class="header-left">
+                        <a href="#">DREAMSHARE</a>
+                    </div>
+                        <h1>SHARE YOUR<br>HOLIDAY DREME</h1>
+                        <p>And find the perfect partner to fullfill it</p>
+                    <div class="btn-wrapper">
+                        <a href="#" class="btn">Find your holiday partner</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
-    <div class="top-wrapper">
-      <div class="container">
-            <h1>SHARE YOUR<br>HOLIDAY DREME</h1>
-            <p>And find the perfect partner to fullfill it</p>
-        <div class="btn-wrapper">
-            <a href="#" class="btn">Find your holiday partner</a>
-        </div>
-      </div>
-    </div>
     <div class="work-wrapper">
       <div class="container">      
          <div class="heading">
